[package]
name = "sui-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }
sui-config = { git = "https://github.com/mystenlabs/sui", package = "sui-config" }
sui-json-rpc-types = { git = "https://github.com/mystenlabs/sui", package = "sui-json-rpc-types" }
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys" }


anyhow = "1.0.79"
tracing = "0.1.40" 
reqwest = "0.11.23" 
serde_json = "1.0.111"
futures = "0.3.30"
